src/App.scss
/* ... */
@media(max-width:450px) {
  .content {
    .content_inputs {

      .letter_search {
        display: grid;
        grid-template-columns: repeat(13, 1fr);
        top: 90%;
        justify-items: center;
        left: 50%;
        transform: translate(-50%, 45%);
        width: 250px;

        span {
          padding-right: 0;
        }
      }
    }

    .countries {
      padding: 0 10%;
      grid-template-columns: repeat(1, 1fr);
      row-gap: 30px;
      padding-top: 20px;

      .country_card:hover {
        transform: unset;
      }
    }
  }

}

@media(max-width:415px) {
  .content {
    .content_inputs {

      input {
        width: 100%;
      }

      .letter_search {
        span {
          color: $VeryDarkBlueLM;
        }

        span:hover {
          color: $DarkGray;
        }
      }
    }

    .countries {
      padding: 0 10%;
      padding-top: 20px;
    }

  }
}

@media(max-width:375px) {
  .bar {
    a {
      h2 {
        font-size: 18px;
      }
    }

    .colormode {
      svg {
        width: 12px;
        height: 12px;
      }

      p {
        font-size: 12px;
      }
    }
  }
}

@media(max-width:330px) {
  .content {
    .countries {
      padding-right: 0;
      padding-left: 0;
    }
  }
}

